# Drug_Toxicity

ToxicGraph/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  baseline.py  config.yaml  docker-compose.yml  eval_datasets.py  evaluate.py  explain.py  fetch_missing_data.py  inference.py  metrics.md  package.json  precompute_cache.py  pyproject.toml  requirements.txt  train.py  train_activity.py  vite.config.js
ToxicGraph/src/: activity_model.py  calibration.py  dataset.py  featurizer.py  fp_model.py  models.py  scaffold_analysis.py  splitter.py  utils.py
ToxicGraph/tests/: test_app.py  test_featurizer.py  test_fp_model.py  test_inference.py  test_model_loading.py  test_models.py  test_training_utils.py
ToxicGraph/web/src/: activity.js  app.js  browse.js  history.js  main.js  multi.js  particles.js  predict.js  similar.js  state.js  viewer.js
ToxicGraph/web/static/: app.css  app.js  browse.js  components.css  history.js  landing.css  multi.js  particles.js  predict.js  style.css  task_info.json  viewer.js
ToxicGraph/web/templates/: index.html
